--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ DB_PORT=3306
 DB_NAME=ip_access
 DB_USER=root
 DB_PASSWORD=Walauskis2025
+SECRET_ACCESS_TOKEN=fe38b00375df50c8c4255d104b7746c50d820c3e
